# textcraft

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml  test_textcraft.py  textcraft.py
.github/workflows/: build.yml  pyproject.toml  python-ci.yml
src/textcraft/: __init__.py  textcraft.py
tests/: test_textcraft.py
