[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "textcraft-py"
version = "0.1.4"
description = "A lightweight, beginner-friendly Python module for text transformation and analysis"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
  { name = "O-sama12" }
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent"
]

[tool.setuptools]
py-modules = ["textcraft"]
